overflow issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,9 +10,13 @@
     font-family: iransansdn, Tahoma;
 }
 
+html,
+body {
+    overflow: hidden;
+}
+
 body {
     margin: 0;
-    overflow-x: hidden;
 }
 
 a {
@@ -27,4 +31,6 @@ main {
 
     overflow-y: auto;
     overflow-x: hidden;
+
+    padding: 0 10vw;
 }
